fixed links on safari

--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -54,8 +54,9 @@ body {
 }
 
 .animate.ng-enter {
-    -webkit-transition: all 600ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
-    transition: all 600ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
+    -webkit-transition: all 1000ms cubic-bezier(0.64, 0.05, 0.35, 1);
+    -webkit-transition-timing-function: all 1000ms cubic-bezier(0.64, 0.05, 0.35, 1);
+    transition: all 1000ms cubic-bezier(0.64, 0.05, 0.35, 1);
     opacity: 0;
 }
 
@@ -131,7 +132,7 @@ a.project-thumbnail:hover {
 
 }
 
-li.active, li.active a:visited {
+li.active, li.active {
     color: #f19ea2;
 }
 
